--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
 	"client": {
-		"host": "Please enter your server URL",
-		"port": "Please enter your server port",
-		"username": "Please enter the bot's username you want"
+		"host": "https://aternos.org/server/",
+		"port": "potato_gamerabT6f.aternos.me:51515",
+		"username": "kaka"
 	},
 	
 	"! DO NOT EDIT BELOW !": "ONLY IF YOU KNOW WHAT YOU ARE DOING",
